# Unimail

./: .gitattributes  .gitignore  .npmrc  .prettierignore  AGENTS.md  CHANGELOG.zh-CN.md  Cargo.toml  README.md  deny.toml  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
.trellis/: .template-hashes.json
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  provider-guidelines.md  quality-guidelines.md  sync-offline-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/07-19-attachments-search/: check.jsonl  design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/07-19-compose-drafts-send/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-19-encrypted-storage-domain/: implement.md  prd.md  task.json
.trellis/tasks/07-19-foundation-shell/: prd.md  task.json
.trellis/tasks/07-19-gmail-adapter/: design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/07-19-imap-qq-163/: design.md  prd.md  task.json
.trellis/tasks/07-19-implement-unimail-v1/: prd.md  task.json
.trellis/tasks/07-19-implement-unimail-v1/research/: release-ci.md
.trellis/tasks/07-19-outlook-adapter/: design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/07-19-provider-contract-mime/: design.md  implement.md  prd.md  task.json
.trellis/tasks/07-19-release-integration/: check.jsonl  design.md  implement.md  prd.md  task.json
.trellis/tasks/07-19-security-hardening/: check.jsonl  design.md  implement.jsonl  implement.md  prd.md  task.json
.trellis/tasks/07-19-sync-offline-core/: implement.md  prd.md  task.json
.trellis/tasks/07-19-unified-inbox-reader/: implement.md  prd.md  task.json  verification.md
.trellis/tasks/archive/2026-07/00-bootstrap-guidelines/: prd.md  task.json
.trellis/tasks/archive/2026-07/07-19-attachments-search/: task.json
.trellis/tasks/archive/2026-07/07-19-compose-drafts-send/: prd.md  task.json
.trellis/tasks/archive/2026-07/07-19-encrypted-storage-domain/: design.md  implement.md  prd.md  task.json
.trellis/tasks/archive/2026-07/07-19-foundation-shell/: design.md  implement.md  task.json
.trellis/workspace/sad/: index.md  journal-1.md
crates/unimail-application/: Cargo.toml
crates/unimail-application/src/: attachment.rs  compose.rs  coordinator.rs  lib.rs  permits.rs  retry.rs  send_gate.rs  test_support.rs
crates/unimail-core/: Cargo.toml
crates/unimail-core/src/: attachment.rs  compose.rs  compose_ipc.rs  domain.rs  ids.rs  lib.rs  mime.rs  onboarding.rs  provider.rs  reader.rs  search.rs  security.rs  storage.rs
crates/unimail-providers/: Cargo.toml
crates/unimail-providers/src/: conformance.rs  fake.rs  lib.rs  mime.rs
crates/unimail-providers/src/gmail/: client.rs  config.rs  credential.rs  dto.rs  mod.rs  oauth.rs  provider.rs  registry.rs
crates/unimail-providers/src/graph/: client.rs  config.rs  credential.rs  dto.rs  mod.rs  oauth.rs  provider.rs  registry.rs
crates/unimail-providers/src/imap/: auth.rs  credential.rs  cursor.rs  mod.rs  preset.rs  provider.rs  registry.rs  session.rs  smtp.rs  test_support.rs  tls.rs
crates/unimail-storage/: Cargo.toml
crates/unimail-storage/migrations/: 0001_initial.sql  0002_sync_offline.sql  0003_compose_send.sql  0004_attachments_search.sql
crates/unimail-storage/src/: credentials.rs  database.rs  error.rs  lib.rs  migration.rs  permissions.rs  repository.rs
crates/unimail-storage/tests/: offline_draft_review_restart.rs  outbound_attempt_restart.rs
doc/: 163_Owner_Acceptance.zh-CN.md  Attachments_Search_Owner_Acceptance.zh-CN.md  Compose_Send_Owner_Acceptance.zh-CN.md  Gmail_Owner_Acceptance.zh-CN.md  Outlook_Owner_Acceptance.zh-CN.md  QQ_Owner_Acceptance.zh-CN.md  Release_Owner_Checklist.zh-CN.md  Security_Threat_Model.zh-CN.md  Unimail_Product_Specification_v1.0.md
scripts/: check-bindings.mjs  check-changed-paths.mjs  check-native-startup.ps1  check-release-note.mjs  check-release-tag.mjs  check-release.mjs  check-security.mjs  git-changes.mjs  release-contract.mjs  validate-release-tag.mjs
src/: App.css  App.test.tsx  App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: attachment_download.rs  authorization_onboarding.rs  lib.rs  main.rs  oauth.rs  onboarding.rs  remote_image.rs  runtime.rs
src/content/: authorization-code-onboarding.zh-CN.ts  compose.zh-CN.ts  gmail-onboarding.zh-CN.ts  mail-reader.zh-CN.ts  oauth-onboarding.zh-CN.ts  security-diagnostics.zh-CN.ts
src/features/accounts/: AuthorizationCodeOnboardingDialog.test.tsx  AuthorizationCodeOnboardingDialog.tsx  GmailOnboardingDialog.test.tsx  GmailOnboardingDialog.tsx  OAuthOnboardingDialog.test.tsx  OAuthOnboardingDialog.tsx
src/features/compose/: ComposePanel.test.tsx  ComposePanel.tsx  DraftsView.tsx  SentView.test.tsx  SentView.tsx
src/features/inbox/: MailWorkspace.test.tsx  MailWorkspace.tsx
src/features/reader/: SafeHtmlMessage.test.tsx  SafeHtmlMessage.tsx  sanitize-mail-html.ts
src/features/security/: SecurityDiagnosticsDialog.test.tsx  SecurityDiagnosticsDialog.tsx  security-diagnostics-text.ts
src/lib/ipc/: application-info.test.ts  application-info.ts  authorization-code-onboarding.test.ts  authorization-code-onboarding.ts  bindings.ts  compose.test.ts  compose.ts  decode.ts  external-link.ts  gmail-onboarding.test.ts  gmail-onboarding.ts  mail-reader.test.ts  mail-reader.ts  oauth-onboarding.test.ts  oauth-onboarding.ts  security-diagnostics.test.ts  security-diagnostics.ts  storage-status.test.ts  storage-status.ts  window-lifecycle.test.ts  window-lifecycle.ts
src/lib/security/: raster-data-url.ts
(+29 files in other folders)
