[package]
name = "unimail-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
ts-rs = { version = "12.0", features = ["serde-compat"] }
uuid = { version = "1.18", features = ["serde", "v4"] }

[lints]
workspace = true
