[package]
name = "unimail-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
mail-builder = { version = "0.4.4", default-features = false }
mail-parser = { version = "0.11.5", default-features = false, features = ["full_encoding"] }
unimail-core = { path = "../unimail-core" }

[dev-dependencies]
proptest = "1.11.0"

[lints]
workspace = true
