[package]
name = "unimail-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
base64 = "0.22.1"
futures-util = "=0.3.32"
getrandom = "0.3.4"
mail-builder = { version = "0.4.4", default-features = false }
mail-parser = { version = "0.11.5", default-features = false, features = ["full_encoding"] }
reqwest = { version = "0.13.4", default-features = false, features = ["rustls-no-provider", "form", "json", "query"] }
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
secrecy = "0.10.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10.9"
tokio = { version = "1.53.0", default-features = false, features = ["macros", "sync", "time"] }
unimail-core = { path = "../unimail-core" }
url = "2.5.8"
uuid = { version = "1.18", features = ["v4"] }

[dev-dependencies]
proptest = "1.11.0"
tokio = { version = "1.53.0", default-features = false, features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }

[lints]
workspace = true
