[package]
name = "unimail-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
fs2 = "0.4"
getrandom = "0.3"
hex = "0.4"
keyring = { version = "4.1.5", default-features = false, features = ["v1"] }
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled-sqlcipher-vendored-openssl", "time", "uuid"] }
rusqlite_migration = "2.6.0"
secrecy = "0.10"
serde_json = "1.0"
thiserror = "2.0"
time = { version = "0.3", features = ["formatting", "parsing"] }
unimail-core = { path = "../unimail-core" }
unicode-normalization = "0.1"
uuid = { version = "1.18", features = ["v4"] }
zeroize = "1.8"

[dev-dependencies]
tempfile = "3.20"

[lints]
workspace = true
